--- a/index.html
+++ b/index.html
@@ -40,18 +40,13 @@
     function execDaumPostcode() {
       new daum.Postcode({
         oncomplete: function(data) {
-            var jibunAddress = data.jibunAddress || data.autoJibunAddress || "";
-            var buildingName = data.buildingName || "";
-            var apartment = data.apartment || "N";
-            var roadAddress = data.roadAddress;
-
-            var postData = {
-              roadAddress: roadAddress,
-              jibunAddress: jibunAddress,
-              zonecode: data.zonecode,
-              buildingName: buildingName,
-              apartment: apartment
-            };
+          var postData = {
+              sido : data.sido,
+              sigungu : data.sigungu,
+              query : data.query,
+              apartment : data.apartment,
+              buildingName: data.buildingName
+          };
              
              window.postMessageToiOS(postData);             
         },
